From 26dbdb0 (master):
=====================

In prisim/bispectrum_phase.py,

(*) Import reduce from functools module
(*) Add member functions rescale_power_spectrum() and
average_rescaled_power_spectrum() to class ClosurePhaseDelaySpectrum
with docstrings to rescale the power spectrum of ratio to power of a
quantity with physical units and to average this rescaled power along
the specified axes respectively. Update docstring accordingly
(*) Include values under keys 'fftpow' in output of member function
FT() of class ClosurePhaseDelaySpectrum. Update member function
docstring accordingly
(*) Include values under keys 'fftpow', 'freq_center', 'freq_wts',
'bw_eff', 'shape', 'lag_corr_length' and 'fftpow' in output dictionary 
of member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum. Update member function docstring
accordingly.
(*) Additional minor updates to docstring of member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum.


From 7c18537 (pbeam):
====================

Throughout the PRISim package,

(*) Change print statements to print functions to be compatible with
Python 3

In prisim/interferometry.py,

(*) Change some print functions to warnings

From d6dd62c (pbeam):
====================

In prisim/interferometry.py,

(*) In member function append_settings() of class ROI_parameters,
handle appropriately when ROI ind is passed as an empty array.
(*) In member function observe() of class InterferometerArray,
handle appropriately when ROI ind is passed as an empty array.

From 0076c70 (pbeam):
====================

In prisim/primary_beams.py,

(*) In function airy_disk_pattern(), remove keyword input
gaussian_approx. Update function docstring accordingly
(*) In function primary_beam_generator(), remove usage of keyword
input gaussian_approx in calls to airy_disk_pattern()

From 8cee83e (closure-adv):
==========================

In prisim/examples/simparms/defaultparms.yaml,
